--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,66 @@
     transform: rotate(360deg);
   }
 }
+
+.blank{
+  color: rgb(195, 132, 132);
+}
+
+
+
+header {
+  width: 100%;
+  height: 80px;
+  /* background-color: #11101b; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 100px;
+}
+
+
+.logo {
+  min-height: 100px;
+  width: 150px;
+  /* background-color: wheat; */
+}
+
+.logo img {
+  margin-top: 10px;
+  height: 100px;
+  width: 100%;
+  /* background-color: #11101b; */
+}
+
+.hamburger {
+  display: none;
+}
+
+.nav-bar ul {
+  display: flex;
+  list-style: none;
+}
+
+.nav-bar ul li a {
+  display: block;
+  color: #fefefe;
+  font-size: 20px;
+  padding: 10px 25px;
+  border-radius: 50px;
+  transition: 0.9s;
+  margin: 0 5px;
+  text-decoration: none;
+  list-style: none;
+}
+
+.nav-bar ul li a:hover {
+  color: #11101b;
+  /* background: #301e67; */
+  background: #5b8fb9;
+  /* transition: margin-right 4s 1s; */
+}
+
+.nav-bar ul li a.active {
+  color: #11101b;
+  background: #5b8fb9;
+}
